fixed radio alignment

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ div {
     display: flex;
     margin-bottom: 0px;
     height: 40px;
-    
+    align-items: center;
 }
 
 div > label {
